Fix user dropdown icon alignment

--- a/src/stylesheets/nav.sass
+++ b/src/stylesheets/nav.sass
@@ -69,6 +69,7 @@ button.lock-room
     width: 175px
   ul
     li
+      overflow: auto
       height: 25px
       .username
         overflow: hidden
